--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 name = "github-search"
 compatibility_date = "2024-12-30"
 pages_build_output_dir = "dist"
-functions = "./functions"
+pages_function_dir = "functions"
